--- a/style.css
+++ b/style.css
@@ -230,3 +230,99 @@ h2{
     left: 180px;
     top: 30px;
 }
+.box27{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 150px;
+    top: 30px;
+}
+.box28{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 120px;
+    top: 60px;
+}
+.box29{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 120px;
+    top: 90px;
+}
+.box30{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 150px;
+    top: 120px;
+}
+.box31{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 180px;
+    top: 150px;
+}
+.box32{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 210px;
+    top: 180px;
+}
+.box33{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 210px;
+    top: 210px;
+}
+.box34{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 180px;
+    top: 240px;
+}
+.box35{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 150px;
+    top: 240px;
+}
+.box36{
+    background-color: rgb(184, 0, 174);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 120px;
+    top: 210px;
+}
+.box37{
+    background-color: rgb(0, 169, 199);
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    left: 50px;
+    top: 50px;
+}
+.box38{
+    background-color: rgb(255, 251, 0);
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    left: 50px;
+    top: 150px;
+}
